# devin-remediation-orchestrator

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  dashboard.py  db.py  devin_client.py  github.py  issues.py  keyboard.py  main.py  models.py  orchestrator.py  poller.py  prometheus.py  simulation.py
scripts/: demo.py
tests/: test_orchestrator.py
